# csv-to-sqlite

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs  lib_integration.rs
