[package]
name = "csv-to-sqlite"
version = "0.1.0"
edition = "2021"
description = "Load CSV files into a queryable SQLite database with automatic column type inference"
license = "MIT"
authors = ["smolkai <smolkai@users.noreply.github.com>"]
readme = "README.md"

[[bin]]
name = "csv-to-sqlite"
path = "src/main.rs"

[lib]
name = "csv_to_sqlite"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
